# very_fast_mcp

./: .gitignore  MANIFEST.in  README.ja.md  README.md  pyproject.toml
tests/: test_cli.py
veryfastmcp/: __init__.py  cli.py
veryfastmcp/templates/: __init__.py
veryfastmcp/templates/app/: .dockerignore  Dockerfile  __init__.py  docker-compose.yml  gitignore
veryfastmcp/templates/mcp/: IMPLEMENTATION.ja.md  IMPLEMENTATION.md  Makefile  README.ja.md  README.md  mcp_server.py  pyproject.toml  requirements-dev.txt  test_client_http.py  test_client_stdio.py
veryfastmcp/templates/mcp/configs/: server.yaml
veryfastmcp/templates/mcp/mcp_app/tools/: greet.py
veryfastmcp/templates/mcp/tests/: test_greet.py  test_server_config.py
veryfastmcp/templates/tool/: test_tool.py  test_tool.py.j2  tool.py.j2
